moved all the imports to the beginning

--- a/session1/complete/session1.ipynb
+++ b/session1/complete/session1.ipynb
@@ -8,10 +8,11 @@
    "source": [
     "# import everything and define a test runner function\n",
     "from importlib import reload\n",
-    "from helper import run\n",
+    "from random import randint\n",
     "\n",
-    "import ecc\n",
-    "import helper"
+    "import ecc, helper\n",
+    "\n",
+    "from helper import run"
    ]
   },
   {
@@ -239,7 +240,7 @@
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.000s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
