--- a/session2/complete/session2.ipynb
+++ b/session2/complete/session2.ipynb
@@ -8,10 +8,22 @@
    "source": [
     "# import everything and define a test runner function\n",
     "from importlib import reload\n",
-    "from helper import run\n",
     "\n",
-    "import ecc\n",
-    "import helper"
+    "import ecc, helper\n",
+    "\n",
+    "from ecc import (\n",
+    "    FieldElement, \n",
+    "    G,\n",
+    "    Point,\n",
+    "    S256Point,\n",
+    ")\n",
+    "from helper import (\n",
+    "    encode_base58,\n",
+    "    hash160,\n",
+    "    hash256,\n",
+    "    little_endian_to_int,\n",
+    "    run,\n",
+    ")"
    ]
   },
   {
@@ -72,8 +84,6 @@
    "source": [
     "# Exercise 1.1\n",
     "\n",
-    "from ecc import FieldElement, Point\n",
-    "\n",
     "prime = 223\n",
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
@@ -89,6 +99,7 @@
     "    y = FieldElement(y_raw, prime)\n",
     "    # try initializing, ValueError means not on curve\n",
     "    # p = Point(x, y, a, b)\n",
+    "    # print whether it's on the curve or not\n",
     "    try:\n",
     "        p = Point(x, y, a, b)\n",
     "        print('({},{}) is on the curve'.format(x_raw, y_raw))\n",
@@ -136,8 +147,6 @@
    "source": [
     "# Example where x1 != x2\n",
     "\n",
-    "from ecc import FieldElement, Point\n",
-    "\n",
     "prime = 137\n",
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
@@ -182,8 +191,6 @@
    "source": [
     "# Exercise 2.1\n",
     "\n",
-    "from ecc import FieldElement, Point\n",
-    "\n",
     "prime = 223\n",
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
@@ -205,6 +212,7 @@
     "    x2 = FieldElement(x2_raw, prime)\n",
     "    y2 = FieldElement(y2_raw, prime)\n",
     "    p2 = Point(x2, y2, a, b)\n",
+    "    # print p1+p2\n",
     "    print('{} + {} = {}'.format(p1, p2, p1+p2))"
    ]
   },
@@ -247,8 +255,6 @@
    ],
    "source": [
     "# Example where x1 != x2\n",
-    "\n",
-    "from ecc import FieldElement, Point\n",
     "\n",
     "prime = 137\n",
     "a = FieldElement(0, prime)\n",
@@ -296,8 +302,6 @@
    ],
    "source": [
     "# Exercise 3.1\n",
-    "\n",
-    "from ecc import FieldElement, Point\n",
     "\n",
     "prime = 223\n",
     "a = FieldElement(0, prime)\n",
@@ -360,19 +364,17 @@
    "source": [
     "# Group Example\n",
     "\n",
-    "from ecc import FieldElement, Point\n",
-    "\n",
     "prime = 223\n",
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
-    "G = Point(FieldElement(47, prime), FieldElement(71, prime), a, b)\n",
+    "g = Point(FieldElement(47, prime), FieldElement(71, prime), a, b)\n",
     "inf = Point(None, None, a, b)\n",
-    "total = G\n",
+    "total = g\n",
     "count = 1\n",
     "\n",
     "while total != inf:\n",
     "    print('{}:{}'.format(count, total))\n",
-    "    total += G\n",
+    "    total += g\n",
     "    count += 1\n",
     "print('{}:{}'.format(count, total))"
    ]
@@ -408,8 +410,6 @@
    ],
    "source": [
     "# Exercise 4.1\n",
-    "\n",
-    "from ecc import FieldElement, Point\n",
     "\n",
     "prime = 223\n",
     "a = FieldElement(0, prime)\n",
@@ -494,7 +494,6 @@
    ],
    "source": [
     "# Confirming order of G is n\n",
-    "from ecc import G\n",
     "\n",
     "n = 0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFEBAAEDCE6AF48A03BBFD25E8CD0364141\n",
     "print(n*G)"
@@ -515,8 +514,6 @@
    ],
    "source": [
     "# Getting the public point from a secret\n",
-    "from ecc import G\n",
-    "reload(ecc)\n",
     "\n",
     "secret = 999\n",
     "point = secret*G\n",
@@ -561,8 +558,6 @@
    "source": [
     "# Exercise 5.1\n",
     "\n",
-    "from ecc import G\n",
-    "\n",
     "secrets = (7, 1485, 2**128, 2**240+2**31)\n",
     "\n",
     "# iterate over secrets\n",
@@ -582,7 +577,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.057s\n",
+      "Ran 1 test in 0.059s\n",
       "\n",
       "OK\n"
      ]
@@ -611,8 +606,6 @@
    ],
    "source": [
     "# SEC Example\n",
-    "\n",
-    "from ecc import S256Point\n",
     "\n",
     "point = S256Point(0x5CBDF0646E5DB4EAA398F365F2EA7A0E3D419B7E0330E39CE92BDDEDCAC4F9BC, 0x6AEBCA40BA255960A3178D6D861A54DBA813D0B813FDE7B5A5082628087264DA)\n",
     "\n",
@@ -651,10 +644,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "S256Point(0x9d5ca49670cbe4c3bfa84c96a8c87df086c6ea6a24ba6b809c9de234496808d5,0x6fa15cc7f3d38cda98dee2419f415b7513dde1301f8643cd9245aea7f3f911f9)\n",
       "049d5ca49670cbe4c3bfa84c96a8c87df086c6ea6a24ba6b809c9de234496808d56fa15cc7f3d38cda98dee2419f415b7513dde1301f8643cd9245aea7f3f911f9\n",
       "039d5ca49670cbe4c3bfa84c96a8c87df086c6ea6a24ba6b809c9de234496808d5\n",
+      "S256Point(0xa598a8030da6d86c6bc7f2f5144ea549d28211ea58faa70ebf4c1e665c1fe9b5,0x204b5d6f84822c307e4b4a7140737aec23fc63b65b35f86a10026dbd2d864e6b)\n",
       "04a598a8030da6d86c6bc7f2f5144ea549d28211ea58faa70ebf4c1e665c1fe9b5204b5d6f84822c307e4b4a7140737aec23fc63b65b35f86a10026dbd2d864e6b\n",
       "03a598a8030da6d86c6bc7f2f5144ea549d28211ea58faa70ebf4c1e665c1fe9b5\n",
+      "S256Point(0xaee2e7d843f7430097859e2bc603abcc3274ff8169c1a469fee0f20614066f8e,0x21ec53f40efac47ac1c5211b2123527e0e9b57ede790c4da1e72c91fb7da54a3)\n",
       "04aee2e7d843f7430097859e2bc603abcc3274ff8169c1a469fee0f20614066f8e21ec53f40efac47ac1c5211b2123527e0e9b57ede790c4da1e72c91fb7da54a3\n",
       "03aee2e7d843f7430097859e2bc603abcc3274ff8169c1a469fee0f20614066f8e\n"
      ]
@@ -663,14 +659,13 @@
    "source": [
     "# Exercise 6.1\n",
     "\n",
-    "from ecc import G\n",
-    "\n",
     "secrets = (999**3, 123, 42424242)\n",
     "\n",
     "# iterate through secrets\n",
     "for secret in secrets:\n",
     "    # get public point\n",
     "    point = secret * G\n",
+    "    print(secret*G)\n",
     "    # uncompressed - b'\\x04' followed by x coord, then y coord\n",
     "    # here's how you express a coordinate in bytes: some_integer.to_bytes(32, 'big')\n",
     "    uncompressed = b'\\x04' + point.x.num.to_bytes(32, 'big') + point.y.num.to_bytes(32, 'big')\n",
@@ -724,7 +719,6 @@
    "source": [
     "# Address Example\n",
     "\n",
-    "from helper import encode_base58, hash160, hash256\n",
     "sec = bytes.fromhex('025CBDF0646E5DB4EAA398F365F2EA7A0E3D419B7E0330E39CE92BDDEDCAC4F9BC')\n",
     "h160 = hash160(sec)\n",
     "raw = b\"\\x00\" + h160\n",
@@ -776,9 +770,6 @@
    ],
    "source": [
     "# Exercise 7.1\n",
-    "from ecc import G\n",
-    "\n",
-    "from helper import hash256, encode_base58, hash160\n",
     "\n",
     "components = (\n",
     "    # (secret, compressed)\n",
@@ -818,7 +809,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.000s\n",
       "\n",
       "OK\n"
      ]
@@ -842,7 +833,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.016s\n",
+      "Ran 1 test in 0.015s\n",
       "\n",
       "OK\n"
      ]
@@ -875,17 +866,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mqYz6JpuKukHzPg94y4XNDdPCEJrNkLQcv\n"
+      "mwJn1YPMq7y5F8J3LkC5Hxg9PHyZ5K4cFv\n"
      ]
     }
    ],
    "source": [
     "# Exercise 8.1\n",
-    "from ecc import G\n",
-    "from helper import hash256, little_endian_to_int\n",
     "\n",
     "# use a passphrase\n",
-    "passphrase = b'jimmy@programmingblockchain.com secret passphrase'\n",
+    "passphrase = b'Jimmy Song Programming Blockchain'\n",
     "secret = little_endian_to_int(hash256(passphrase))\n",
     "\n",
     "# get the public point\n",
