--- a/session2/session2.ipynb
+++ b/session2/session2.ipynb
@@ -8,10 +8,22 @@
    "source": [
     "# import everything and define a test runner function\n",
     "from importlib import reload\n",
-    "from helper import run\n",
     "\n",
-    "import ecc\n",
-    "import helper"
+    "import ecc, helper\n",
+    "\n",
+    "from ecc import (\n",
+    "    FieldElement, \n",
+    "    G,\n",
+    "    Point,\n",
+    "    S256Point,\n",
+    ")\n",
+    "from helper import (\n",
+    "    encode_base58,\n",
+    "    hash160,\n",
+    "    hash256,\n",
+    "    little_endian_to_int,\n",
+    "    run,\n",
+    ")"
    ]
   },
   {
@@ -52,8 +64,6 @@
    "source": [
     "# Exercise 1.1\n",
     "\n",
-    "from ecc import FieldElement, Point\n",
-    "\n",
     "prime = 223\n",
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
@@ -61,11 +71,13 @@
     "points = ((192,105), (17,56), (200,119), (1,193), (42,99))\n",
     "\n",
     "# iterate over points\n",
+    "for x_raw, y_raw in points:\n",
     "    # Initialize points this way:\n",
     "    # x = FieldElement(x_raw, prime)\n",
     "    # y = FieldElement(y_raw, prime)\n",
     "    # try initializing, ValueError means not on curve\n",
-    "    # p = Point(x, y, a, b)"
+    "    # p = Point(x, y, a, b)\n",
+    "    # print whether it's on the curve or not"
    ]
   },
   {
@@ -87,8 +99,6 @@
    "outputs": [],
    "source": [
     "# Example where x1 != x2\n",
-    "\n",
-    "from ecc import FieldElement, Point\n",
     "\n",
     "prime = 137\n",
     "a = FieldElement(0, prime)\n",
@@ -124,8 +134,6 @@
    "source": [
     "# Exercise 2.1\n",
     "\n",
-    "from ecc import FieldElement, Point\n",
-    "\n",
     "prime = 223\n",
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
@@ -139,7 +147,8 @@
     "    # p1 = Point(x1, y1, a, b)\n",
     "    # x2 = FieldElement(x2_raw, prime)\n",
     "    # y2 = FieldElement(y2_raw, prime)\n",
-    "    # p2 = Point(x2, y2, a, b)"
+    "    # p2 = Point(x2, y2, a, b)\n",
+    "    # print p1+p2"
    ]
   },
   {
@@ -161,8 +170,6 @@
    "outputs": [],
    "source": [
     "# Example where x1 != x2\n",
-    "\n",
-    "from ecc import FieldElement, Point\n",
     "\n",
     "prime = 137\n",
     "a = FieldElement(0, prime)\n",
@@ -198,8 +205,6 @@
    "source": [
     "# Exercise 3.1\n",
     "\n",
-    "from ecc import FieldElement, Point\n",
-    "\n",
     "prime = 223\n",
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
@@ -225,19 +230,17 @@
    "source": [
     "# Group Example\n",
     "\n",
-    "from ecc import FieldElement, Point\n",
-    "\n",
     "prime = 223\n",
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
-    "G = Point(FieldElement(47, prime), FieldElement(71, prime), a, b)\n",
+    "g = Point(FieldElement(47, prime), FieldElement(71, prime), a, b)\n",
     "inf = Point(None, None, a, b)\n",
-    "total = G\n",
+    "total = g\n",
     "count = 1\n",
     "\n",
     "while total != inf:\n",
     "    print('{}:{}'.format(count, total))\n",
-    "    total += G\n",
+    "    total += g\n",
     "    count += 1\n",
     "print('{}:{}'.format(count, total))"
    ]
@@ -265,8 +268,6 @@
    "outputs": [],
    "source": [
     "# Exercise 4.1\n",
-    "\n",
-    "from ecc import FieldElement, Point\n",
     "\n",
     "prime = 223\n",
     "a = FieldElement(0, prime)\n",
@@ -317,7 +318,6 @@
    "outputs": [],
    "source": [
     "# Confirming order of G is n\n",
-    "from ecc import G\n",
     "\n",
     "n = 0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFEBAAEDCE6AF48A03BBFD25E8CD0364141\n",
     "print(n*G)"
@@ -330,8 +330,6 @@
    "outputs": [],
    "source": [
     "# Getting the public point from a secret\n",
-    "from ecc import G\n",
-    "reload(ecc)\n",
     "\n",
     "secret = 999\n",
     "point = secret*G\n",
@@ -365,8 +363,6 @@
    "source": [
     "# Exercise 5.1\n",
     "\n",
-    "from ecc import G\n",
-    "\n",
     "secrets = (7, 1485, 2**128, 2**240+2**31)\n",
     "\n",
     "# iterate over secrets\n",
@@ -392,8 +388,6 @@
    "outputs": [],
    "source": [
     "# SEC Example\n",
-    "\n",
-    "from ecc import S256Point\n",
     "\n",
     "point = S256Point(0x5CBDF0646E5DB4EAA398F365F2EA7A0E3D419B7E0330E39CE92BDDEDCAC4F9BC, 0x6AEBCA40BA255960A3178D6D861A54DBA813D0B813FDE7B5A5082628087264DA)\n",
     "\n",
@@ -431,8 +425,6 @@
    "source": [
     "# Exercise 6.1\n",
     "\n",
-    "from ecc import G\n",
-    "\n",
     "secrets = (999**3, 123, 42424242)\n",
     "\n",
     "# iterate through secrets\n",
@@ -463,7 +455,6 @@
    "source": [
     "# Address Example\n",
     "\n",
-    "from helper import encode_base58, hash160, hash256\n",
     "sec = bytes.fromhex('025CBDF0646E5DB4EAA398F365F2EA7A0E3D419B7E0330E39CE92BDDEDCAC4F9BC')\n",
     "h160 = hash160(sec)\n",
     "raw = b\"\\x00\" + h160\n",
@@ -502,9 +493,6 @@
    "outputs": [],
    "source": [
     "# Exercise 7.1\n",
-    "from ecc import G\n",
-    "\n",
-    "from helper import hash256, encode_base58, hash160\n",
     "\n",
     "components = (\n",
     "    # (secret, compressed)\n",
@@ -566,8 +554,6 @@
    "outputs": [],
    "source": [
     "# Exercise 8.1\n",
-    "from ecc import G\n",
-    "from helper import hash256, little_endian_to_int\n",
     "\n",
     "# use a passphrase\n",
     "passphrase = b'<fill this in>'\n",
