--- a/session7/complete/session7.ipynb
+++ b/session7/complete/session7.ipynb
@@ -8,15 +8,33 @@
    "source": [
     "# import everything and define a test runner function\n",
     "from importlib import reload\n",
-    "from helper import run\n",
+    "from math import ceil, log\n",
     "\n",
-    "import block\n",
-    "import ecc\n",
-    "import helper\n",
-    "import merkleblock\n",
-    "import network\n",
-    "import script\n",
-    "import tx"
+    "import block, helper, network\n",
+    "\n",
+    "from block import (\n",
+    "    Block,\n",
+    "    GENESIS_BLOCK_HASH,\n",
+    "    TESTNET_GENESIS_BLOCK_HASH,\n",
+    ")\n",
+    "from helper import (\n",
+    "    hash256,\n",
+    "    merkle_parent,\n",
+    "    merkle_parent_level,\n",
+    "    merkle_root,\n",
+    "    read_varint,\n",
+    "    run,\n",
+    ")\n",
+    "from merkleblock import MerkleTree\n",
+    "from network import (\n",
+    "    GetDataMessage,\n",
+    "    GetHeadersMessage,\n",
+    "    HeadersMessage,\n",
+    "    SimpleNode,\n",
+    "    VersionMessage,\n",
+    "    BLOCK_DATA_TYPE,\n",
+    ")\n",
+    "from tx import Tx"
    ]
   },
   {
@@ -86,7 +104,7 @@
       "OK\n",
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.000s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -210,8 +228,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sending: version: 7f110100000000000000000093ece55b00000000000000000000000000000000000000000000ffff000000008d20000000000000000000000000000000000000ffff000000008d20dceaadcf6f555f431b2f70726f6772616d6d696e67626c6f636b636861696e3a302e312f0000000001\n",
-      "receiving: version: 7f1101000d0400000000000095ece55b00000000000000000000000000000000000000000000ffff4830fd33f8760d04000000000000000000000000000000000000000000000000e895499df59a6f38102f5361746f7368693a302e31372e302f9403160001\n",
+      "sending: version: 7f1101000000000000000000e9c1e85b00000000000000000000000000000000000000000000ffff000000008d20000000000000000000000000000000000000ffff000000008d2018fbc44bebb024061b2f70726f6772616d6d696e67626c6f636b636861696e3a302e312f0000000001\n",
+      "receiving: version: 7f1101000d04000000000000ebc1e85b00000000000000000000000000000000000000000000ffff4830fd33c5050d04000000000000000000000000000000000000000000000000bea3e9d7673d8d75102f5361746f7368693a302e31372e302fc404160001\n",
       "sending: verack: \n",
       "receiving: verack: \n",
       "verack: \n"
@@ -220,8 +238,6 @@
    ],
    "source": [
     "# Handshake Example\n",
-    "\n",
-    "from network import SimpleNode, VersionMessage\n",
     "\n",
     "node = SimpleNode('tbtc.programmingblockchain.com', testnet=True, logging=True)\n",
     "\n",
@@ -253,7 +269,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.095s\n",
+      "Ran 1 test in 0.087s\n",
       "\n",
       "OK\n"
      ]
@@ -299,9 +315,6 @@
    ],
    "source": [
     "# Block Header Download Example\n",
-    "\n",
-    "from block import GENESIS_BLOCK_HASH\n",
-    "from network import GetHeadersMessage, HeadersMessage, SimpleNode\n",
     "\n",
     "node = SimpleNode('btc.programmingblockchain.com', testnet=False)\n",
     "node.handshake()\n",
@@ -366,9 +379,6 @@
    "source": [
     "# Exercise 5.1\n",
     "\n",
-    "from block import TESTNET_GENESIS_BLOCK_HASH\n",
-    "from network import GetHeadersMessage, HeadersMessage, SimpleNode\n",
-    "\n",
     "# connect to tbtc.programmingblockchain.com\n",
     "node = SimpleNode('tbtc.programmingblockchain.com', testnet=True)\n",
     "# handshake\n",
@@ -420,8 +430,6 @@
    "source": [
     "# Merkle Parent Example\n",
     "\n",
-    "from helper import hash256\n",
-    "\n",
     "tx_hash0 = bytes.fromhex('c117ea8ec828342f4dfb0ad6bd140e03a50720ece40169ee38bdc15d9eb64cf5')\n",
     "tx_hash1 = bytes.fromhex('c131474164b412e3406696da1ee20ab0fc9bf41c8f05fa8ceea7a08d672d7cc5')\n",
     "\n",
@@ -462,8 +470,6 @@
    ],
    "source": [
     "# Exercise 6.1\n",
-    "\n",
-    "from helper import hash256\n",
     "\n",
     "hex_hash1 = 'f391da6ecfeed1814efae39e7fcb3838ae0b02c02ae7d0a5848a66947c0727b0'\n",
     "hex_hash2 = '3d238a92a94532b946c90e19c49351c763696cff3db400485b813aecb8a13181'\n",
@@ -577,8 +583,6 @@
    "source": [
     "# Exercise 7.1\n",
     "\n",
-    "from helper import merkle_parent\n",
-    "\n",
     "hex_hashes = [\n",
     "    '8b30c5ba100f6f2e5ad1e2a742e5020491240f8eb514fe97c713c31718ad7ecd',\n",
     "    '7f4e6f9e224e20fda0ae4c44114237f97cd35aca38d83081c9bfd41feb907800',\n",
@@ -644,8 +648,6 @@
    "source": [
     "# Merkle Root Example\n",
     "\n",
-    "from helper import merkle_parent_level\n",
-    "\n",
     "hex_hashes = [\n",
     "    'c117ea8ec828342f4dfb0ad6bd140e03a50720ece40169ee38bdc15d9eb64cf5',\n",
     "    'c131474164b412e3406696da1ee20ab0fc9bf41c8f05fa8ceea7a08d672d7cc5',\n",
@@ -710,7 +712,6 @@
    "source": [
     "# Exercise 8.1\n",
     "\n",
-    "from helper import merkle_parent_level\n",
     "hex_hashes = [\n",
     "    '42f6f52f17620653dcc909e58bb352e0bd4bd1381e2955d19c00959a22122b2e',\n",
     "    '94c3af34b9667bf787e1c6a0a009201589755d01d02fe2877cc69b929d2418d4',\n",
@@ -777,7 +778,6 @@
    "source": [
     "# Block Merkle Root Example\n",
     "\n",
-    "from helper import merkle_root\n",
     "tx_hex_hashes = [\n",
     "    '42f6f52f17620653dcc909e58bb352e0bd4bd1381e2955d19c00959a22122b2e',\n",
     "    '94c3af34b9667bf787e1c6a0a009201589755d01d02fe2877cc69b929d2418d4',\n",
@@ -839,8 +839,6 @@
    ],
    "source": [
     "# Exercise 9.1\n",
-    "\n",
-    "from helper import merkle_root\n",
     "\n",
     "want = '4297fb95a0168b959d1469410c7527da5d6243d99699e7d041b7f3916ba93301'\n",
     "\n",
@@ -988,14 +986,12 @@
    "source": [
     "# Merkle Tree Example\n",
     "\n",
-    "import math\n",
-    "\n",
     "total = 16\n",
     "\n",
-    "max_depth = math.ceil(math.log(total, 2))\n",
+    "max_depth = ceil(log(total, 2))\n",
     "merkle_tree = []\n",
     "for depth in range(max_depth + 1):\n",
-    "    num_items = math.ceil(total / 2**(max_depth - depth))\n",
+    "    num_items = ceil(total / 2**(max_depth - depth))\n",
     "    level_hashes = [None] * num_items\n",
     "    merkle_tree.append(level_hashes)\n",
     "\n",
@@ -1023,9 +1019,6 @@
    ],
    "source": [
     "# Merkle Tree Populating and Navigating Example\n",
-    "\n",
-    "from merkleblock import MerkleTree\n",
-    "from helper import merkle_parent_level, merkle_parent\n",
     "\n",
     "hex_hashes = [\n",
     "    \"9745f7173ef14ee4155722d1cbf13304339fd00d900b759c6f9d58579b5765fb\",\n",
@@ -1074,9 +1067,6 @@
    ],
    "source": [
     "# Merkle Tree Populating Example #2\n",
-    "\n",
-    "from merkleblock import MerkleTree\n",
-    "from helper import merkle_parent\n",
     "\n",
     "hex_hashes = [\n",
     "    \"9745f7173ef14ee4155722d1cbf13304339fd00d900b759c6f9d58579b5765fb\",\n",
@@ -1134,8 +1124,6 @@
    ],
    "source": [
     "# Merkle Tree Populating Example #3\n",
-    "from merkleblock import MerkleTree\n",
-    "from helper import merkle_parent\n",
     "\n",
     "hex_hashes = [\n",
     "    \"9745f7173ef14ee4155722d1cbf13304339fd00d900b759c6f9d58579b5765fb\",\n",
