--- a/session7/session7.ipynb
+++ b/session7/session7.ipynb
@@ -2,21 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import everything and define a test runner function\n",
     "from importlib import reload\n",
-    "from helper import run\n",
+    "from math import ceil, log\n",
     "\n",
-    "import block\n",
-    "import ecc\n",
-    "import helper\n",
-    "import merkleblock\n",
-    "import network\n",
-    "import script\n",
-    "import tx"
+    "import block, helper, network\n",
+    "\n",
+    "from block import (\n",
+    "    Block,\n",
+    "    GENESIS_BLOCK_HASH,\n",
+    "    TESTNET_GENESIS_BLOCK_HASH,\n",
+    ")\n",
+    "from helper import (\n",
+    "    hash256,\n",
+    "    merkle_parent,\n",
+    "    merkle_parent_level,\n",
+    "    merkle_root,\n",
+    "    read_varint,\n",
+    "    run,\n",
+    ")\n",
+    "from merkleblock import MerkleTree\n",
+    "from network import (\n",
+    "    GetDataMessage,\n",
+    "    GetHeadersMessage,\n",
+    "    HeadersMessage,\n",
+    "    SimpleNode,\n",
+    "    VersionMessage,\n",
+    "    BLOCK_DATA_TYPE,\n",
+    ")\n",
+    "from tx import Tx"
    ]
   },
   {
@@ -41,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,15 +71,51 @@
     "# next 12 are command\n",
     "# next 4 are payload length\n",
     "# next 4 are checksum\n",
-    "# rest is payload\n",
-    "# print the command"
+    "# rest is payload"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E\n",
+      "======================================================================\n",
+      "ERROR: test_parse (network.NetworkEnvelopeTest)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/jimmy/pb-exercises/session7/network.py\", line 84, in test_parse\n",
+      "    envelope = NetworkEnvelope.parse(stream)\n",
+      "  File \"/home/jimmy/pb-exercises/session7/network.py\", line 62, in parse\n",
+      "    raise NotImplementedError\n",
+      "NotImplementedError\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "FAILED (errors=1)\n",
+      "E\n",
+      "======================================================================\n",
+      "ERROR: test_serialize (network.NetworkEnvelopeTest)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/jimmy/pb-exercises/session7/network.py\", line 96, in test_serialize\n",
+      "    envelope = NetworkEnvelope.parse(stream)\n",
+      "  File \"/home/jimmy/pb-exercises/session7/network.py\", line 62, in parse\n",
+      "    raise NotImplementedError\n",
+      "NotImplementedError\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "FAILED (errors=1)\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 1.2\n",
     "\n",
@@ -84,9 +138,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E\n",
+      "======================================================================\n",
+      "ERROR: test_serialize (network.VersionMessageTest)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/jimmy/pb-exercises/session7/network.py\", line 156, in test_serialize\n",
+      "    self.assertEqual(v.serialize().hex(), '7f11010000000000000000000000000000000000000000000000000000000000000000000000ffff000000008d20000000000000000000000000000000000000ffff000000008d2000000000000000001b2f70726f6772616d6d696e67626c6f636b636861696e3a302e312f0000000001')\n",
+      "  File \"/home/jimmy/pb-exercises/session7/network.py\", line 149, in serialize\n",
+      "    raise NotImplementedError\n",
+      "NotImplementedError\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "FAILED (errors=1)\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 2.1\n",
     "\n",
@@ -113,9 +189,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E\n",
+      "======================================================================\n",
+      "ERROR: test_serialize (network.GetHeadersMessageTest)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/jimmy/pb-exercises/session7/network.py\", line 187, in test_serialize\n",
+      "    self.assertEqual(gh.serialize().hex(), '7f11010001a35bd0ca2f4a88c4eda6d213e2378a5758dfcd6af437120000000000000000000000000000000000000000000000000000000000000000000000000000000000')\n",
+      "  File \"/home/jimmy/pb-exercises/session7/network.py\", line 179, in serialize\n",
+      "    raise NotImplementedError\n",
+      "NotImplementedError\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "FAILED (errors=1)\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 3.1\n",
     "\n",
@@ -125,9 +223,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E\n",
+      "======================================================================\n",
+      "ERROR: test_parse (network.HeadersMessageTest)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/jimmy/pb-exercises/session7/network.py\", line 213, in test_parse\n",
+      "    headers = HeadersMessage.parse(stream)\n",
+      "  File \"/home/jimmy/pb-exercises/session7/network.py\", line 205, in parse\n",
+      "    raise NotImplementedError\n",
+      "NotImplementedError\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "FAILED (errors=1)\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 3.2\n",
     "\n",
@@ -137,13 +257,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NotImplementedError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-833e448f8fc1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mversion\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mVersionMessage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mnode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mversion\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommand\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mversion\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mserialize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait_for_commands\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34mb'verack'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/pb-exercises/session7/network.py\u001b[0m in \u001b[0;36mserialize\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    147\u001b[0m         \u001b[0;31m# latest block is 4 bytes little endian\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    148\u001b[0m         \u001b[0;31m# relay is 00 if false, 01 if true\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 149\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    150\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    151\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNotImplementedError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Handshake Example\n",
-    "\n",
-    "from network import SimpleNode, VersionMessage\n",
     "\n",
     "node = SimpleNode('tbtc.programmingblockchain.com', testnet=True, logging=True)\n",
     "\n",
@@ -184,9 +315,6 @@
    "source": [
     "# Block Header Download Example\n",
     "\n",
-    "from block import GENESIS_BLOCK_HASH\n",
-    "from network import GetHeadersMessage, HeadersMessage, SimpleNode\n",
-    "\n",
     "node = SimpleNode('btc.programmingblockchain.com', testnet=False)\n",
     "node.handshake()\n",
     "last_block_hash = GENESIS_BLOCK_HASH\n",
@@ -223,9 +351,6 @@
    "outputs": [],
    "source": [
     "# Exercise 5.1\n",
-    "\n",
-    "from block import TESTNET_GENESIS_BLOCK_HASH\n",
-    "from network import GetHeadersMessage, HeadersMessage, SimpleNode\n",
     "\n",
     "# connect to tbtc.programmingblockchain.com\n",
     "# handshake\n",
@@ -287,8 +412,6 @@
    "source": [
     "# Exercise 6.1\n",
     "\n",
-    "from helper import hash256\n",
-    "\n",
     "hex_hash1 = 'f391da6ecfeed1814efae39e7fcb3838ae0b02c02ae7d0a5848a66947c0727b0'\n",
     "hex_hash2 = '3d238a92a94532b946c90e19c49351c763696cff3db400485b813aecb8a13181'\n",
     "\n",
@@ -316,8 +439,6 @@
    "outputs": [],
    "source": [
     "# Merkle Parent Level Example\n",
-    "\n",
-    "from helper import merkle_parent\n",
     "\n",
     "hex_hashes = [\n",
     "    'c117ea8ec828342f4dfb0ad6bd140e03a50720ece40169ee38bdc15d9eb64cf5',\n",
@@ -365,8 +486,6 @@
    "source": [
     "# Exercise 7.1\n",
     "\n",
-    "from helper import merkle_parent\n",
-    "\n",
     "hex_hashes = [\n",
     "    '8b30c5ba100f6f2e5ad1e2a742e5020491240f8eb514fe97c713c31718ad7ecd',\n",
     "    '7f4e6f9e224e20fda0ae4c44114237f97cd35aca38d83081c9bfd41feb907800',\n",
@@ -403,8 +522,6 @@
    "outputs": [],
    "source": [
     "# Merkle Root Example\n",
-    "\n",
-    "from helper import merkle_parent_level\n",
     "\n",
     "hex_hashes = [\n",
     "    'c117ea8ec828342f4dfb0ad6bd140e03a50720ece40169ee38bdc15d9eb64cf5',\n",
@@ -462,7 +579,6 @@
    "source": [
     "# Exercise 8.1\n",
     "\n",
-    "from helper import merkle_parent_level\n",
     "hex_hashes = [\n",
     "    '42f6f52f17620653dcc909e58bb352e0bd4bd1381e2955d19c00959a22122b2e',\n",
     "    '94c3af34b9667bf787e1c6a0a009201589755d01d02fe2877cc69b929d2418d4',\n",
@@ -504,7 +620,6 @@
    "source": [
     "# Block Merkle Root Example\n",
     "\n",
-    "from helper import merkle_root\n",
     "tx_hex_hashes = [\n",
     "    '42f6f52f17620653dcc909e58bb352e0bd4bd1381e2955d19c00959a22122b2e',\n",
     "    '94c3af34b9667bf787e1c6a0a009201589755d01d02fe2877cc69b929d2418d4',\n",
@@ -558,8 +673,6 @@
    "outputs": [],
    "source": [
     "# Exercise 9.1\n",
-    "\n",
-    "from helper import merkle_root\n",
     "\n",
     "want = '4297fb95a0168b959d1469410c7527da5d6243d99699e7d041b7f3916ba93301'\n",
     "\n",
@@ -653,14 +766,12 @@
    "source": [
     "# Merkle Tree Example\n",
     "\n",
-    "import math\n",
-    "\n",
     "total = 16\n",
     "\n",
-    "max_depth = math.ceil(math.log(total, 2))\n",
+    "max_depth = ceil(log(total, 2))\n",
     "merkle_tree = []\n",
     "for depth in range(max_depth + 1):\n",
-    "    num_items = math.ceil(total / 2**(max_depth - depth))\n",
+    "    num_items = ceil(total / 2**(max_depth - depth))\n",
     "    level_hashes = [None] * num_items\n",
     "    merkle_tree.append(level_hashes)\n",
     "\n",
@@ -675,9 +786,6 @@
    "outputs": [],
    "source": [
     "# Merkle Tree Populating and Navigating Example\n",
-    "\n",
-    "from merkleblock import MerkleTree\n",
-    "from helper import merkle_parent_level, merkle_parent\n",
     "\n",
     "hex_hashes = [\n",
     "    \"9745f7173ef14ee4155722d1cbf13304339fd00d900b759c6f9d58579b5765fb\",\n",
@@ -713,9 +821,6 @@
    "outputs": [],
    "source": [
     "# Merkle Tree Populating Example #2\n",
-    "\n",
-    "from merkleblock import MerkleTree\n",
-    "from helper import merkle_parent\n",
     "\n",
     "hex_hashes = [\n",
     "    \"9745f7173ef14ee4155722d1cbf13304339fd00d900b759c6f9d58579b5765fb\",\n",
@@ -760,8 +865,6 @@
    "outputs": [],
    "source": [
     "# Merkle Tree Populating Example #3\n",
-    "from merkleblock import MerkleTree\n",
-    "from helper import merkle_parent\n",
     "\n",
     "hex_hashes = [\n",
     "    \"9745f7173ef14ee4155722d1cbf13304339fd00d900b759c6f9d58579b5765fb\",\n",
