--- a/session8/session8.ipynb
+++ b/session8/session8.ipynb
@@ -8,16 +8,41 @@
    "source": [
     "# import everything and define a test runner function\n",
     "from importlib import reload\n",
-    "from helper import run\n",
+    "from time import sleep\n",
     "\n",
-    "import bloomfilter\n",
-    "import block\n",
-    "import ecc\n",
-    "import helper\n",
-    "import merkleblock\n",
-    "import network\n",
-    "import script\n",
-    "import tx"
+    "import bloomfilter, merkleblock\n",
+    "\n",
+    "from block import Block\n",
+    "from bloomfilter import (\n",
+    "    BloomFilter,\n",
+    "    BIP37_CONSTANT,\n",
+    ")\n",
+    "from ecc import PrivateKey\n",
+    "from helper import (\n",
+    "    bit_field_to_bytes,\n",
+    "    decode_base58,\n",
+    "    hash160,\n",
+    "    hash256,\n",
+    "    little_endian_to_int,\n",
+    "    murmur3,\n",
+    "    run,\n",
+    "    SIGHASH_ALL,\n",
+    ")\n",
+    "from merkleblock import MerkleBlock\n",
+    "from network import (\n",
+    "    GetDataMessage,\n",
+    "    GetHeadersMessage,\n",
+    "    HeadersMessage,\n",
+    "    SimpleNode,\n",
+    "    FILTERED_BLOCK_DATA_TYPE,\n",
+    "    TX_DATA_TYPE,\n",
+    ")\n",
+    "from script import p2pkh_script\n",
+    "from tx import (\n",
+    "    Tx,\n",
+    "    TxIn,\n",
+    "    TxOut,\n",
+    ")"
    ]
   },
   {
@@ -27,8 +52,6 @@
    "outputs": [],
    "source": [
     "# Example Bloom Filter\n",
-    "\n",
-    "from helper import hash256\n",
     "\n",
     "bit_field_size = 10\n",
     "bit_field = [0] * bit_field_size\n",
@@ -46,8 +69,6 @@
    "outputs": [],
    "source": [
     "# Example Bloom Filter 2\n",
-    "\n",
-    "from helper import hash256\n",
     "\n",
     "bit_field_size = 10\n",
     "bit_field = [0] * bit_field_size\n",
@@ -68,8 +89,6 @@
    "outputs": [],
    "source": [
     "# Example Bloom Filter 3\n",
-    "\n",
-    "from helper import hash160, hash256\n",
     "\n",
     "bit_field_size = 10\n",
     "bit_field = [0] * bit_field_size\n",
@@ -98,9 +117,6 @@
    "outputs": [],
    "source": [
     "# Example BIP0037 Bloom Filter\n",
-    "\n",
-    "from helper import murmur3\n",
-    "from bloomfilter import BIP37_CONSTANT\n",
     "\n",
     "field_size = 2\n",
     "num_functions = 2\n",
@@ -139,8 +155,6 @@
    "outputs": [],
    "source": [
     "# Exercise 1.1\n",
-    "from bloomfilter import BloomFilter, BIP37_CONSTANT\n",
-    "from helper import bit_field_to_bytes, murmur3\n",
     "\n",
     "field_size = 10\n",
     "function_count = 5\n",
@@ -207,25 +221,15 @@
    "source": [
     "# Exercise 2.2\n",
     "\n",
-    "from bloomfilter import BloomFilter\n",
-    "from ecc import PrivateKey\n",
-    "from helper import decode_base58, hash256, little_endian_to_int\n",
-    "from merkleblock import MerkleBlock\n",
-    "from network import (\n",
-    "    FILTERED_BLOCK_DATA_TYPE, \n",
-    "    GetDataMessage,\n",
-    "    SimpleNode,\n",
-    ")\n",
-    "\n",
-    "block_hash = bytes.fromhex('00000000000001fd16e986436252c023b2f9ba729319309189af9ab5be9d4ff9')\n",
-    "passphrase = b''  # FILL THIS IN\n",
+    "block_hash = bytes.fromhex('0000000053787814ed9dd8c029d0a0a9af4ab8ec0591dc31bdc4ab31fae88ce9')\n",
+    "passphrase = b'Jimmy Song Programming Blockchain'  # FILL THIS IN\n",
     "secret = little_endian_to_int(hash256(passphrase))\n",
     "private_key = PrivateKey(secret=secret)\n",
     "addr = private_key.point.address(testnet=True)\n",
     "print(addr)\n",
     "filter_size = 30\n",
     "filter_num_functions = 5\n",
-    "filter_tweak = -1  # FILL THIS IN\n",
+    "filter_tweak = 90210  # FILL THIS IN\n",
     "\n",
     "# get the hash160 of the address, which is what we need to add to our filter\n",
     "# create a bloom filter of size 30 and 5 functions. Add a tweak that you like\n",
@@ -282,34 +286,8 @@
    "source": [
     "# Exercise 4.1\n",
     "\n",
-    "import time\n",
-    "\n",
-    "from block import Block\n",
-    "from bloomfilter import BloomFilter\n",
-    "from ecc import PrivateKey\n",
-    "from helper import (\n",
-    "    decode_base58,\n",
-    "    hash256,\n",
-    "    encode_varint,\n",
-    "    little_endian_to_int, \n",
-    "    read_varint,\n",
-    "    SIGHASH_ALL,\n",
-    ")\n",
-    "from merkleblock import MerkleBlock\n",
-    "from network import (\n",
-    "    GetDataMessage,\n",
-    "    GetHeadersMessage,\n",
-    "    HeadersMessage,\n",
-    "    NetworkEnvelope,\n",
-    "    SimpleNode,\n",
-    "    TX_DATA_TYPE,\n",
-    "    FILTERED_BLOCK_DATA_TYPE,\n",
-    ")\n",
-    "from script import p2pkh_script\n",
-    "from tx import Tx, TxIn, TxOut\n",
-    "\n",
-    "last_block_hex = '00000000000538d5c2246336644f9a4956551afb44ba47278759ec55ea912e19'\n",
-    "passphrase = b''  # FILL THIS IN\n",
+    "last_block_hex = '000000000d65610b5af03d73ed67704713c9b734d87cf4b970d39a0416dd80f9'\n",
+    "passphrase = b'Jimmy Song Programming Blockchain'  # FILL THIS IN\n",
     "secret = little_endian_to_int(hash256(passphrase))\n",
     "private_key = PrivateKey(secret=secret)\n",
     "addr = private_key.point.address(testnet=True)\n",
@@ -318,7 +296,7 @@
     "target_address = 'mwJn1YPMq7y5F8J3LkC5Hxg9PHyZ5K4cFv'\n",
     "filter_size = 30\n",
     "filter_num_functions = 5\n",
-    "filter_tweak = -1  # FILL THIS IN\n",
+    "filter_tweak = 90210  # FILL THIS IN\n",
     "target_h160 = decode_base58(target_address)\n",
     "target_script = p2pkh_script(target_h160)\n",
     "fee = 5000  # fee in satoshis\n",
@@ -371,8 +349,7 @@
     "# create a GetDataMessage\n",
     "# ask for our transaction by adding its hash and TX_DATATYPE to the message\n",
     "# send the message\n",
-    "# now wait for a response\n",
-    "# print if we get back a tx message that we created"
+    "# now wait for a response"
    ]
   }
  ],
